--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.23.0",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "eventemitter3": "^4.0.7",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
