--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.178",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "eventemitter3": "^4.0.7",
+    "lodash": "^4.17.21",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
